feat(api): add route endpoints
